style.css
html {
    font-family: 'manrope', sans-serif;
    background-color: #00171F;
}

body {
    min-height: 100vh;
    margin: 0;
    padding: 0;
    display: flex;
    flex-direction: column;
}

nav {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 1rem;
}

.logo {
    font-size: 1.5rem;
    font-weight: bold;
    color: #FFFFFF;
    padding-left: 2rem;
}

ul {
    display: flex;
    list-style: none;
    margin: 0;
    padding: 0;
}

li {
    margin-right: 1rem;
}

a {
    text-decoration: none;
    color: #FFFFFF;
}

main {
    padding: 0;
    border-top: 2px solid #003459;
    flex: 1;
}

.layout-wrapper {
    flex: 1;
    grid-template-columns: 400px 1fr;
    display: grid;
    gap: 1rem;
}

aside {
    padding: 1rem;
    border-right: 2px solid #003459;
}

.sidebar {
    display: flex;
    flex-direction: column;
    gap: 1rem;
    padding: 1rem;
}

section.form-container {
    display: flex;
    flex-direction: column;
    gap: 1rem;
    padding: 1rem;
}

.form-container h2 {
    font-size: 1.70rem;
    font-weight: bold;
    color: #FFFFFF;
    margin: 0;
    padding: 0;
}

.form-container p {
    font-size: .85rem;
    font-weight: normal;
    color: #FFFFFF;
    margin: 0;
    padding: 0;
}

form {
    display: flex;
    flex-direction: column;
    gap: 1rem;
    padding: 1rem;
}

.form-container label {
    font-size: 1rem;
    font-weight: bold;
    color: #FFFFFF;
    margin: 0;
    padding: 0;
}

.form-container input {
    font-size: 1rem;
    font-weight: normal;
    color: #FFFFFF;
    margin: 0;
    padding: 0;
}

.form-container textarea {
    font-size: 1rem;
    font-weight: normal;
    color: #FFFFFF;
    margin: 0;
    padding: 0;
}

input[type="text"], textarea {
    width: 100%;
    height: 100%;
    padding: 16px;
    font-size: 16px;
    box-sizing: border-box;
    background-color: #00171F;
    color: #FFFFFF;
    border: 1px solid #003459;
    border-radius: 8px;
    outline: none;
}

input[type="date"] {
    width: 100%;
    height: 100%;
    padding: 16px;
    font-size: 16px;
    box-sizing: border-box;
    background-color: #00171F;
    color: #FFFFFF;
    border: 1px solid #003459;
    border-radius: 8px;
    outline: none;
    cursor: pointer;
    color-scheme: dark;
}

select[id="status"] {
    width: 100%;
    height: 100%;
    padding: 16px;
    font-size: 16px;
    box-sizing: border-box;
    background-color: #00171F;
    color: #FFFFFF;
    border: 1px solid #003459;
    border-radius: 8px;
    outline: none;
    cursor: pointer;
}

fieldset {
    border: none;
    padding: 0;
}

button[type="submit"] {
    width: 100%;
    height: 100%;
    padding: 16px;
    margin-top: 34px;
    font-size: 16px;
    box-sizing: border-box;
    background-color: #007EA7;
    color: #FFFFFF;
    border: 1px solid #007EA7;
    border-radius: 8px;
    outline: none;
    cursor: pointer;
}

.stats-overview {
    margin-top: auto;
}

section[class="stats-overview"] h3 {
    font-size: 18px;
    font-weight: bold;
    color: #007EA7;
    margin: 0;
    padding: 0;
}

dl[class="stats-list"] {
    display: flex;
    justify-content: start;
    gap: 2rem;
}

dd[id="total-applications"], dd[id="interviewing-count"] {
    font-size: 34px;
    font-weight: bold;  
    color: #FFFFFF;
    margin: 0;
    padding: 0;
}

div[class="stat-item"] {
    display: flex;
    flex-direction: column;
    font-size: 10px;
    font-weight: normal;  
    color: #FFFFFF;
    margin: 0;
    padding: 0;
}

dt {
    text-transform: uppercase;
    letter-spacing: 1px;
}

.stats-overview {
    margin-top: auto;
    flex-wrap: wrap;
    border: 1px solid #003459;
    background-color: #011d31;
    box-shadow: #011d31;
    border-radius: 16px;
    padding: 12px;
}

footer {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 0;
    font-weight: normal;
    color: #FFFFFF;
}

.dashboard-content {
    flex-direction: column;
    padding: 0;
    border-top: 2px solid #003459;
}

.dashboard-content header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 36px;
}

.content-header h2 {
    font-size: 2rem;
    font-weight: bold;
    color: #FFFFFF;
    margin: 0;
    padding: 0;
}

.content-header p {
    font-size: 1rem;
    font-weight: normal;
    color: #FFFFFF;
}

.controls {
    display: flex;
    gap: 1rem;
}

img {
    height: 16px;
    width: 16px;
    padding: 0 4px;
}

#filter img {
    filter: brightness(0) invert(1);
}

#sort img {
    filter: brightness(0) invert(1);
}

button[id="filter"] {
    height: 100%;
    padding: 10px;
    box-sizing: border-box;
    background-color: #00171F;
    color: #FFFFFF;
    border: 2px solid #007EA7;
    border-radius: 8px;
    outline: none;
    cursor: pointer;
}

button[id="sort"] {
    height: 100%;
    padding: 10px;
    box-sizing: border-box;
    background-color: #00171F;
    color: #FFFFFF;
    border: 2px solid #007EA7;
    border-radius: 8px;
    outline: none;
    cursor: pointer;
}

div[id="empty-state"] {
    height: 76.5%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    border-style: dashed;
    border-color: #007EA7;
    margin: 10px;
    padding: 10px;
    border-radius: 8px;
    border-width: 1px;
    border-style: dashed;
    margin-right: 28px;
}

div[id="empty-state"] h3 {
    font-size: 1.5rem;
    font-weight: bold;
    color: #FFFFFF;
    margin: 16px;
    padding: 0;
}

div[id="empty-state"] p {
    font-size: 1rem;
    font-weight: normal;
    color: #FFFFFF;
    margin: 0;
    padding: 0;
}

span {
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #000000;
    border-radius: 50%;
    height: 64px;
    width: 64px
}

#empty-state img {
    height: 40px;
    width: 40px
}

